mitre/internal/mysql/network-ingress/allow-mysql-pod-communication-on-3306-and-namespace.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-mysql-pod-communication-on-3306-and-selected-namespace"
spec:
  endpointSelector:
    matchLabels:
      {}
  ingress: 
  - fromEndpoints:
    - matchLabels:
        {}
    toPorts:
    -  ports:
       -  port: '3306'
          protocol: ANY
